--- a/Projekt/Dictionaries/Fonts.xaml
+++ b/Projekt/Dictionaries/Fonts.xaml
@@ -1,8 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
+
     <!--Definitions of font family-->
     <FontFamily x:Key="FontAwesome">pack://appliction;,,,/Fonts/#FontAwesome</FontFamily>
+    <FontFamily x:Key="FontAwesome5">pack://appliction;,,,/Fonts/#Font Awesome 5 Free</FontFamily>
+
+
+<!--Font size-->
+    <system:Double x:Key="FontSizeSmaller">10</system:Double>
+    <system:Double x:Key="FontSizeSmall">12</system:Double>
+    <system:Double x:Key="FontSizeRegular">14</system:Double>
+    <system:Double x:Key="FontSizeLarge">20</system:Double>
+    <system:Double x:Key="FontSizeXLarge">24</system:Double>
+    <system:Double x:Key="FontSizeXXLarge">30</system:Double>
+
+    
+    <!--Font size-->
+    <system:Double x:Key="FontSizeSmaller">10</system:Double>
+    <system:Double x:Key="FontSizeSmall">12</system:Double>
+    <system:Double x:Key="FontSizeRegular">14</system:Double>
+    <system:Double x:Key="FontSizeLarge">20</system:Double>
+    <system:Double x:Key="FontSizeXLarge">24</system:Double>
+    <system:Double x:Key="FontSizeXXLarge">30</system:Double>
 
     <!--FontAwsome-->
     <system:String x:Key="FontAwesomeChatIcon">&#xf086;</system:String>
@@ -20,5 +40,8 @@
     <system:String x:Key="FontAwesomInfoIcon">&#xf05a;</system:String>
     <system:String x:Key="FontAwsomeMenuDots">&#xf141;</system:String>
     <system:String x:Key="FontAwsomeCross">&#xf00d;</system:String>
+    <system:String x:Key="FontAwsomeCircle">&#xf111;</system:String>
+    <system:String x:Key="FontAwsomeCheckedCircle">&#xf058;</system:String>
+
 
 </ResourceDictionary>
